<resources>
    <string name="app_name">GOURMET-MASH-UP</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="bottom_title_home">home</string>
    <string name="bottom_title_member">member</string>
    <string name="bottom_title_rank">ranking</string>
    <string name="password_confirm">패스워드 확인</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_us">Join Us!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">패스워드</string>
    <string name="user_id">User ID</string>
    <string name="bottom_title_add">+</string>
    <string name="bottom_title_feed">피드</string>
    <string name="add_wish_list">위시리스트 추가</string>
    <string name="add_stamp">스탬프 추가</string>
    <string name="stamp">스탬프</string>
    <string name="bottom_title_profile">My Page</string>

    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>

    <string name="where_do_you_want_to_eat">어디서 드실건가요?</string>
    <string name="what_do_you_want_to_eat">무엇을 드실건가요?</string>
    <string name="where_the_shop_is_located">가게 위치는 어딘가요?</string>

    <string name="where_will_you_want_to_eat">어디서 드셨나요?</string>
    <string name="what_will_you_want_to_eat">무엇을 드셨나요?</string>
    <string name="how_the_taste">어떠셨나요?</string>

    <string name="next">다음</string>
    <string name="hint_write_shop_name">상호명을 적어주세요.</string>
    <string name="hint_write_menu_name">메뉴명을 적어주세요.</string>
    <string name="hint_write_address">위치를 적어주세요.</string>
    <string name="pic_for_food">pic_for_food</string>
    <string name="back_button">back_button</string>
    <string name="put_in_id">아이디를 입력해주세요.</string>
    <string name="put_in_your_PR">한 줄 자기소개를 입력해주세요.</string>
    <string name="one_line_PR">한 줄 소개</string>
    <string name="complete">완료</string>
    <string name="put_in_pw">패스워드를 입력해주세요.</string>
    <string name="id">아이디</string>
    <string name="Log_in">로그인</string>
    <string name="Ranking">Ranking</string>
    <string name="follower">팔로워</string>
    <string name="signup">회원가입</string>
    <string name="if_you_already_signup">이미 회원가입을 하셨다면</string>
    <string name="here">여기</string>
    <string name="click_here">를 눌러주세요</string>
    <string name="codachaya">Codachaya</string>
    <string name="no_one_gourmet">추천 해줄 수 미식가 아직 없습니다.\n올해의 미식가에 도전하세요!</string>
    <string name="recommended_gourmet">추천 미식가</string>
    <string name="newsfeed">뉴스피드</string>
    <string name="i_am_hint_bro">I am Hint Bro</string>
</resources>
