<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/bottom_title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feed"
        android:title="@string/bottom_title_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:title="@string/bottom_title_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rank"
        android:title="@string/bottom_title_rank"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/close_icon"
        app:showAsAction="always"
        android:title="" />
</menu>